--- a/package.xml
+++ b/package.xml
@@ -4,7 +4,7 @@
 	<version>0.0.0</version>
 	<description>The PTrackerROS package</description>
 	<maintainer email="previtali@dis.uniroma1.it">Fabio Previtali</maintainer>
-	<license>LGPL v. 3.0</license>
+	<license>LGPLv3</license>
 	
 	<buildtool_depend>catkin</buildtool_depend>
 	
