--- a/config/setup.cfg
+++ b/config/setup.cfg
@@ -1,12 +1,17 @@
+[Network]
+
 [Observation]
 
-gaussianNoise on
+gaussianNoise off
 gaussianNoiseX 0
 gaussianNoiseY 0
 gaussianNoiseTheta 0
 falsePositiveBurstTime 1500
-falsePositiveObservations 5
+falsePositiveObservations 0
 trueNegativeBurstTime 0
 trueNegativeObservations 0
 
-[Network]
+[Sensor]
+
+distortion linear
+startingDistortionDistance 2.0
