--- a/config/setup.cfg
+++ b/config/setup.cfg
@@ -1,17 +1,20 @@
 [Network]
 
+networkCoverage inf
+packetLossProbability 0
+
 [Observation]
 
 gaussianNoise off
 gaussianNoiseX 0
 gaussianNoiseY 0
 gaussianNoiseTheta 0
-falsePositiveBurstTime 1500
+falsePositiveBurstTime 0
 falsePositiveObservations 0
 trueNegativeBurstTime 0
 trueNegativeObservations 0
 
 [Sensor]
 
-distortion linear
+distortion none
 startingDistortionDistance 2.0
